--- a/grammerQuiz.html
+++ b/grammerQuiz.html
@@ -98,7 +98,6 @@
             }
             #container-quiz {
                 height: auto;
-                border: 2px solid lightgray;
                 width: 50vw;
                 display: flex;
                 flex-direction: column;
@@ -418,6 +417,15 @@
            userResult.addEventListener("click", quizResult, false);
         </script>
     </template>
+
+
+    <script>
+
+        window.onload = function() {
+            const template = document.getElementById("quizInter");
+            document.body.append(template.content.cloneNode(true));
+        }
+    </script>
 
 
 
