--- a/quizDiagram.html
+++ b/quizDiagram.html
@@ -42,7 +42,17 @@
                         </div>
                     </div>
                     <div class = "categoryInstructions">
-                        <div class = "category-a">Category A</div>
+                            <div class = "category-a">Category A</div>
+                            <div class = "category-instructions">
+                                <b>Beginner</b> grammer level, The best course fit your category is <b class = "indi">
+                                    <a href = "#" class = "takeoff-user">Elementary English.</a>
+                                </b>
+                                With 26 course covering all topics in basic English Grammer and one quiz at the end of 
+                                every course you will be proficient in using basic English grammar.
+                            </div>
+                        </div>
+                    <div class = "categoryInstructions">
+                        <div class = "category-a">Category A+</div>
                         <div class = "category-instructions">
                             <b>Elementary</b> grammer level, The best course fit your category is <b class = "indi">
                                 <a href = "#" class = "takeoff-user">Elementary English.</a>
