--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Speak-Up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "Stylesheet" type = "text/css" href = "styles/speakStyle.css"/>
+    <link rel = "Stylesheet" type = "text/css" href = "speakStyle.css"/>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya SC' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet'>
