--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script defer type = "text/javascript" src = "js/speakScript.js"></script>
+    <script defer type = "text/javascript" src = "speakScript.js"></script>
 
 </head>
 <body>
