--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         <div class= "mobileMenu">
             <div id = "gridTable">
                 <div class = "icon icon-1">
-                    <img class = "icons-setup" src = "images/lectures.jpg">
+                    <img class = "icons-setup" src = "logoAndImages/lectures.jpg">
                 </div>
                 <div class = "icon icon-2">
-                        <img class = "icons-setup" src = "images/library.jpg">
+                        <img class = "icons-setup" src = "logoAndImages/library.jpg">
                 </div>
                 <div class = "icon icon-3">
-                        <img class = "icons-setup" src = "images/resources.jpg">
+                        <img class = "icons-setup" src = "logoAndImages/resources.jpg">
                 </div>
                 <div class = "icon icon-4">
-                        <img class = "icons-setup" src = "images/video-icon.jpg">
+                        <img class = "icons-setup" src = "logoAndImages/video-icon.jpg">
                        
                 </div>
                 <div class = "txt txt-1">Lectures</div>
